--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
 title: DevOpsify
-email: info@devopsify.ca
+email: info@devopsify.io
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+url: "devopsify.io" # the base hostname & protocol for your site
 
-twitter_username:
-github_username:
+twitter_username: "devopsifyio"
+github_username: "devopsify"
 
 # Build settings
 markdown: kramdown
